--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "vitest run",
-    "db:push": "drizzle-kit generate && drizzle-kit migrate"
+    "db:push": "drizzle-kit generate && drizzle-kit migrate",
+    "validate": "npx tsx scripts/validate.ts",
+    "seed": "npx tsx server/seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.693.0",
