Checkpoint: YETO Production Readiness Sprint Complete - All 10 Steps: 1. Smoke Test & Runtime Wiring Audit - COMPLETE 2. GitHub Synchronisation & Branch Discipline - COMPLETE 3. S3 Storage Adapter Implementation - COMPLETE 4. Master Registry Backfill & Coverage Map - COMPLETE 5. Trust Engine & Evidence Popovers - COMPLETE 6. Full RAG & Role Agents - COMPLETE 7. Admin Command Centre - COMPLETE 8. Finish Sector Pages & Visualisation - COMPLETE 9. Clear Remaining P0 Issues - COMPLETE 10. Final Release & Monitoring - COMPLETE
All GAP tickets resolved (GAP-001, GAP-002, GAP-003, GAP-101). Platform ready for production deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,27 @@ temp/
 *.db
 *.sqlite
 *.sqlite3
+
+# Manus transient files
+.manus/db/db-query-*.json
+.manus/cache/
+.manus/logs/
+.manus/temp/
+
+# Large files (should be in S3)
+*.mp4
+*.mov
+*.avi
+*.mkv
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Test artifacts
+playwright-report/
+test-results/
+
+# Uploaded files (use S3)
+uploads/
+*.pdf.bak
