Checkpoint: Steps 1-5 complete: Production directory structure, OPERATIONS.md, RECOVERY_RUNBOOK.md, S3 manifests (s3-assets.json), AWS environment mapping (aws-env-map.md), large file guard script, and enhanced CI/CD workflow with security scanning and deployment automation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,6 +183,15 @@ jobs:
         run: pnpm audit --audit-level=high
         continue-on-error: true
 
+  large-files:
+    name: Large File Guard
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check for large files
+        run: bash scripts/check-large-files.sh
+        continue-on-error: true
+
   deploy-preview:
     name: Deploy Preview
     runs-on: ubuntu-latest
