chore: add GitHub templates, CODEOWNERS, and release-gate CI job
- Add CODEOWNERS for PR review routing
- Add pull_request_template.md requiring tests + release gate
- Add bug.yml and feature.yml issue templates
- Add release-gate job to CI workflow (10/10 required)
- Add typecheck-warning job (non-blocking, 141 pre-existing errors)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,61 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
+  release-gate:
+    name: Release Gate (10/10 Required)
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run release gate
+        run: node scripts/release-gate.mjs
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+
+  typecheck-warning:
+    name: TypeScript Check (Non-Blocking)
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run type check (warning only)
+        run: |
+          echo "⚠️ TypeScript check - 141 pre-existing errors expected"
+          pnpm typecheck || echo "::warning::TypeScript errors detected (141 pre-existing)"
+
   e2e:
     name: E2E Tests
     runs-on: ubuntu-latest
