--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/express": "4.17.21",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^24.7.0",
@@ -101,6 +103,7 @@
     "@types/react-dom": "^19.2.1",
     "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/ui": "^4.0.18",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.4",
