Exclude all workflows from git (GitHub App permission issue)

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ assets/mockups/
 client/public/images/letterhead-ar.png
 client/public/images/letterhead-en.png
 .github/workflows/deploy.yml
+.github/workflows/
