--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ assets/mockups/
 # Large letterhead files (use optimized versions)
 client/public/images/letterhead-ar.png
 client/public/images/letterhead-en.png
+.github/workflows/deploy.yml
+.github/workflows/
