--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,6 +84,11 @@ jobs:
             echo "No db:push or db:migrate script found; skipping schema apply."
           fi
 
+      # Seed the database with test data required for CI tests
+      - name: Seed CI database
+        shell: bash
+        run: node scripts/seed-ci.mjs
+
       # Run tests with one retry and capture logs to help diagnose flakes.
       - name: Unit tests (with retry + log)
         shell: bash
